[package]
name = "root"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
lumber = { git = "https://github.com/foxfriends/lumber" }
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
uuid = { version = "0.8", features = ["v4"] }
