[package]
name = "root"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
colored = "2.0"
dotenv = "0.15"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
lumber = { git = "https://github.com/foxfriends/lumber", features = ["serde"] }
once_cell = "1.5"
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "master", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"], default-features = false }
tokio = { version = "1.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.3"
